Implement zero-bandwidth upload solution with GCS and rate limiting
- Add Google Cloud Storage service for direct uploads
- Implement signed URL generation for zero-bandwidth uploads
- Add rate limiting middleware to prevent abuse
- Create DirectUpload component for small files
- Update BatchUpload to use direct uploads
- Add file processing endpoint to move files from GCS to Drive
- Integrate Sentry for error monitoring
- Add comprehensive error handling and retry logic

This eliminates proxy bandwidth costs for uploads by allowing clients
to upload directly to GCS, then processing files server-side.

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,12 @@
     },
     "app/api/files/confirm-upload/route.ts": {
       "maxDuration": 30
+    },
+    "app/api/files/create-signed-url/route.ts": {
+      "maxDuration": 30
+    },
+    "app/api/files/process-upload/route.ts": {
+      "maxDuration": 60
     }
   }
 }
