--- a/vercel.json
+++ b/vercel.json
@@ -9,22 +9,18 @@
   "crons": [],
   "functions": {
     "app/api/files/upload/route.ts": {
-      "maxDuration": 60
+      "maxDuration": 60,
+      "maxBodySize": "10mb"
     },
     "app/api/files/upload-chunk/route.ts": {
-      "maxDuration": 300
+      "maxDuration": 300,
+      "maxBodySize": "50mb"
     },
     "app/api/files/create-upload-session/route.ts": {
       "maxDuration": 30
     },
     "app/api/files/confirm-upload/route.ts": {
       "maxDuration": 30
-    },
-    "app/api/files/create-signed-url/route.ts": {
-      "maxDuration": 30
-    },
-    "app/api/files/process-upload/route.ts": {
-      "maxDuration": 60
     }
   }
 }
